DATACHARTS: datacharts now update upon selecting the appropriate period; titles also update

--- a/app/views/home/_topbar.html.erb
+++ b/app/views/home/_topbar.html.erb
@@ -1,7 +1,7 @@
 <style>
   #topbar .toggle{font-size:8vw;}  
 
-  .toggle {
+  #topbar .toggle {
     width:33vw;
     margin:0.1vw;
 /*    width:12vw;
