--- a/app/views/users/analysis_partials/charts/_columnchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_columnchart.html.erb
@@ -1,16 +1,9 @@
-<h1>Stacked ColumnChart</h1>
+<h1>Column Chart</h1>
 
 
-<section id="week-columnchart">
-  <h3>Week activity by days</h3>
-  <div></div>
-</section>
-
-
-
-<section id="total-columnchart"> <!-- give week/month/year option-->
-  <h3>All time activity by days</h3>
-  <div></div>
+<section id="columnchart" class="data-charts">
+  <h3 class="chart-title">Column Chart</h3>
+  <div style="width:100vw; height:30vh;"></div>
 </section>
 
 
