--- a/app/views/users/analysis_partials/charts/_donutchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_donutchart.html.erb
@@ -1,13 +1,9 @@
 <h1>Donut Chart</h1>
 
-<section id="week-donutchart">
-  <h3>Activity this week</h3>
-  <div></div>
-</section>
 
-<section id="total-donutchart"> <!-- give option for week/month/year-->
-  <h3>All time activity</h3>
-  <div></div>
+<section id="donutchart" class="data-charts">
+  <h3 class="chart-title">Donut Chart</h3>
+  <div style="width:100vw; height:30vh"></div>
 </section>
 
 
