--- a/app/views/users/analysis.html.erb
+++ b/app/views/users/analysis.html.erb
@@ -10,7 +10,7 @@
 <!-- <div id="chart_div"></div>
  -->
 <section id="data-analysis-screen">
-  <h1>analyses</h1>
+  <h1>data analysis</h1>
   
  
 
@@ -88,10 +88,10 @@
     }
 
     $(document).ready(function(){
+
       $('#period-bar button').on('click', function(){
         var selectedPeriod = $(this).val();
         
-
         /* donut chart */
         var donutChartDiv = $('#donutchart div')[0],
             donutChartArray = getDonutChartArray(dataHash, selectedPeriod),
@@ -102,7 +102,8 @@
             donutChartTitle = $(donutChartDiv).parent().children('.chart-title');
 
         makeDonutChart(donutChartArray, donutChartDiv, donutChartOptions);
-        donutChartTitle.html(donutChartTitle += ' for this ' + selectedPeriod);
+        newDonutChartTitle =  selectedPeriod;
+        donutChartTitle.html('Donut chart for this ' + selectedPeriod);
 
 
         /* column chart */
@@ -118,9 +119,12 @@
             columnChartTitle = $(columnChartDiv).parent().children('.chart-title');
 
         makeColumnChart(columnChartArray, columnChartDiv, columnChartOptions);
-        columnChartTitle.html(columnChartTitle += ' for this ' + selectedPeriod);
+        columnChartTitle.html('Column chart for this ' + selectedPeriod);
 
       }); 
+
+      /* default button selection */
+      $('#period-bar').children('button[value="week"]').click().addClass('active');
 
     });
     
