--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,4 +1,19 @@
 
+
+  <style>
+    #login-button-form input {
+      width: 33vw;
+      
+    }
+    #login-button-form * {
+      height: 7.5vw;
+      font-size: 3.5vw;
+      margin: 0 1vw 0 1vw;
+    }
+    #login-button-form button {
+      width: 20vw;
+    }
+  </style>
 <h1>Settings</h1>
 
 
@@ -14,18 +29,24 @@
   <form id="logout-button" action="/session" method="POST">
     <input type="hidden" name="_method" value="DELETE">
     <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-    <button type="submit">Log out</button>
+    <button type="submit" class="btn btn-default">Log out</button>
   </form>
 
 <%else%>
   <h1>Not logged in</h1>
 
   <!--Log in Button-->
-  <form id="signup-button-form" action="/login" method="POST">
-    <input type="email" name="email" placeholder="Email">
-    <input type="password" name="password" placeholder="Password">
+  <form id="login-button-form" class="form-inline" action="/login" method="POST">
+    <div class="form-group">
+      <label class="sr-only">Email address</label>
+      <input type="email" name="email" class="form-control" placeholder="Email">
+    </div>
+    <div class="form-group">
+      <label class="sr-only">Password</label>
+      <input type="password" name="password" class="form-control"placeholder="Password">
+    </div>
     <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-    <button type="submit">Log in</button>
+    <button type="submit" class="btn btn-primary">Sign in</button>
   </form>
 
   <!-- sign up button -->
