ANALYSIS: fixed active class on period bar ||| ENTRIES: converted new entry to modal and moved js to index.html.erb

--- a/app/views/home/_new_entry.html.erb
+++ b/app/views/home/_new_entry.html.erb
@@ -2,11 +2,11 @@
 <style>
   #new-entry-screen {
     width:100vw;
-    height:100vh;
+    height:50vh;
     background-color:pink;
 
     position:absolute;
-    top:0;
+    top:7vh;
     z-index:1;
 
     display:none;
