--- a/app/views/home/modal_partials/_new_entry.html.erb
+++ b/app/views/home/modal_partials/_new_entry.html.erb
@@ -17,6 +17,8 @@
             </select>
           Entry </label> 
         </div>
+
+        <button type="button" class="btn btn-primary" id="new-category-btn">New Category</button>
         
         <!-- Modal Body -->
         <div class="modal-body">
