--- a/app/views/home/modal_partials/_new_category.html.erb
+++ b/app/views/home/modal_partials/_new_category.html.erb
@@ -1,21 +1,37 @@
 <!-- Modal -->
-<div class="modal fade" id="new-entry" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="new-category" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-          <span class="sr-only">Close</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">New Category</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      <form action="/users/<%=session[:user_id]%>/categories" method="POST" id="form-category"> 
+
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Edit / Create Category</h4>
+          <input type="text" name="name" list="categories-list"/>
+          <datalist id="categories-list">
+            <%@categories.each do |c|%>
+              <%if c.user_id == session[:user_id]%>
+                <option value="<%=c[:name]%>"> <%=c[:name]%> </option>
+              <%end%>
+            <%end%>
+          </datalist> 
+        </div>
+
+
+        <div class="modal-body">
+          <select name="icon">
+            <option value="1">icon 1</option>
+            <option value="2">icon 2</option>
+            <option value="3">icon 3</option>
+          </select> <!-- TODO -->
+
+          <input type="hidden" name="user_id" value="<%=session[:user_id]%>">
+          <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
