HEROKU deploy 1 ||| USERS: signup page has email input as type email so it has the email keyboard on mobile. email params are now .downcase'd so that the user's input is case insensitive for email

--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -3,7 +3,7 @@
 
 <form action="/users" method="POST">
   <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-  <input type="text" name="email" placeholder="Email">
+  <input type="email" name="email" placeholder="Email">
   <input type="password" name="password" placeholder="Password">
 
   <button>Sign up</button>
