CATEGORIES: removed old select, replaced with hidden input. added nice icons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,12 @@
 <!-- TODO move styles elsewhere-->
 <style>
-
+  #icon-choices {}
+  #icon-choices .glyphicon {
+    float: left;
+    display:inline-block;
+    margin:3vw;
+    font-size:6.25vw;
+  }
 
   #timeline {
     height:70vh;
