TIMELINE: text centered and no longer a scrolling window ||| TOPBAR: topbar now is position fixed and persistent

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,12 +11,12 @@
     color:lightgreen;
   }
 
-  #timeline {
+/*  #timeline {
     height:70vh;
     width:90vw;
     border:1vw solid darkgrey;
     overflow: scroll;
-  }
+  }*/
 </style>
 
 
