--- a/app/views/home/modal_partials/_new_category.html.erb
+++ b/app/views/home/modal_partials/_new_category.html.erb
@@ -42,7 +42,14 @@
             <span class="glyphicon glyphicon-camera"></span>
             <span class="glyphicon glyphicon-asterisk"></span>
             <span class="glyphicon glyphicon-road"></span>
-
+            <span class="glyphicon glyphicon-phone"></span>
+            <span class="glyphicon glyphicon-credit-card"></span>
+            <span class="glyphicon glyphicon-bed"></span>
+            <span class="glyphicon glyphicon-wrench"></span>
+            <span class="glyphicon glyphicon-warning-sign"></span>
+            <span class="glyphicon glyphicon-picture"></span>
+            <span class="glyphicon glyphicon-tags"></span>
+            <span class="glyphicon glyphicon-envelope"></span>
           </div>
 
           <input type="hidden" name="user_id" value="<%=session[:user_id]%>">
