TOPBAR: added clearfix to fix the position-fixed problem of the top bar covering the parts underneath

--- a/app/views/home/_topbar.html.erb
+++ b/app/views/home/_topbar.html.erb
@@ -18,6 +18,9 @@
   .toggle .glyphicon {
     text-align: center;
   }
+  #topbar-clearfix {
+    height:15vw;
+  }
 </style>
 
 
@@ -39,4 +42,5 @@
   </button>
   
 </nav>
+<div id="topbar-clearfix"></div>
 
