DATABASE: categories now have color column ||| inputs have been adjusted to input it too

--- a/app/views/users/analysis_partials/charts/_columnchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_columnchart.html.erb
@@ -35,9 +35,9 @@
     
     /* loop through categories */
     for (var cat in dataHash){
-      if (dataHash.hasOwnProperty(cat)) {
-        console.log(cat + " -> " + dataHash[cat]);
-      }
+      // if (dataHash.hasOwnProperty(cat)) {
+      //   console.log(cat + " -> " + dataHash[cat]);
+      // }
 
       var categoryHrsOnDays = {
         name: cat, 
