--- a/app/views/users/analysis_partials/charts/_donutchart.html.erb
+++ b/app/views/users/analysis_partials/charts/_donutchart.html.erb
@@ -20,9 +20,9 @@
 
     /* loop through categories */
     for (var cat in dataHash){
-      if (dataHash.hasOwnProperty(cat)) {
-        console.log(cat + " -> " + dataHash[cat]);
-      }
+      // if (dataHash.hasOwnProperty(cat)) {
+      //   console.log(cat + " -> " + dataHash[cat]);
+      // }
 
       var categoryEntries = dataHash[cat]['entries'],
           categoryEntriesLength = categoryEntries.length,
