--- a/app/views/home/modal_partials/_new_category.html.erb
+++ b/app/views/home/modal_partials/_new_category.html.erb
@@ -40,7 +40,6 @@
             <span class="glyphicon glyphicon-text-background"></span>
             <span class="glyphicon glyphicon-education"></span>
             <span class="glyphicon glyphicon-camera"></span>
-            <span class="glyphicon glyphicon-asterisk"></span>
             <span class="glyphicon glyphicon-road"></span>
             <span class="glyphicon glyphicon-phone"></span>
             <span class="glyphicon glyphicon-credit-card"></span>
@@ -51,6 +50,8 @@
             <span class="glyphicon glyphicon-tags"></span>
             <span class="glyphicon glyphicon-envelope"></span>
           </div>
+
+          <input type="color" name="color">
 
           <input type="hidden" name="user_id" value="<%=session[:user_id]%>">
           <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
