SETTINGS > CATEGORIES: consolidated name to one input

--- a/app/views/home/modal_partials/_new_category.html.erb
+++ b/app/views/home/modal_partials/_new_category.html.erb
@@ -70,7 +70,7 @@
     $('#icon-choices .glyphicon').on('click', function(){
       var thisIcon = $(this);
           iconClass = $(this).attr('class'),
-          iconName = iconClass.split('-')[1];
+          iconName = iconClass.split('glyphicon-')[1];
 
       //remove selected glow
       $('.glyphicon').removeClass('selected');
